fix button visibilty safari and componentize button

--- a/client/src/components/ControlsBottom/ControlsBottom.scss
+++ b/client/src/components/ControlsBottom/ControlsBottom.scss
@@ -17,16 +17,7 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    // margin-top: 20px;
-    // background: #003768;
-    // background: linear-gradient(
-    //   90deg,
-    //   rgba(87, 114, 138, 1) 7%,
-    //   rgba(37, 73, 106, 1) 38%,
-    //   rgb(0, 50, 93) 68%
-    // );
     display: flex;
-    // justify-content: space-between;
     justify-content: flex-end;
     align-items: center;
 
@@ -171,7 +162,7 @@
   }
   #btn-bottom-scale {
     scale: 0.8;
-    padding-right: 4px;
+    padding-right: 6px;
     padding-left: 0px;
   }
 }
